@@ -8,7 +8,7 @@
 # Copyright (c) 2000-2008 by Andreas Kupries
 # All rights reserved.
 #
-# RCS: @(#) $Id: tree.testsuite,v 1.7 2008/09/04 02:09:30 andreas_kupries Exp $
+# RCS: @(#) $Id: tree.testsuite,v 1.8 2009/06/22 18:21:59 andreas_kupries Exp $
 
 ::tcltest::testConstraint tree_critcl [string equal $impl critcl]
 
@@ -1883,6 +1883,27 @@ test tree-${impl}-3.14.8 {swap swaps node relationships correctly} {
 	leave 0.1   \
 	leave root  \
 	]
+
+test tree-${impl}-3.14.9 {swap keeps attributes with their nodes} {
+    tree mytree
+    mytree insert root end 0 1 2 3
+    mytree set 0 attr a
+    mytree set 1 attr b
+    mytree set 2 attr c
+    mytree set 3 attr d
+
+    mytree swap 0 3
+
+    set res [list \
+		 [mytree children root] \
+		 [mytree get 0 attr] \
+		 [mytree get 1 attr] \
+		 [mytree get 2 attr] \
+		 [mytree get 3 attr]]
+
+    mytree destroy
+    set res
+} {{3 1 2 0} a b c d}
 
 ############################################################
 
